--- a/index.html
+++ b/index.html
@@ -264,18 +264,11 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
                                   cellspacing="5">
                                   <tbody>
                                     <tr>
-                                      <td id="EventDate">Saturday, October, Aug. 24<sup>th</sup></td>
-                                      <td id="Event">
-                                      <a href="Event_Pages/Hart-o-Ween-2015.jpg" rel="lightbox[hartoween]"
-                                        title="Hart-o-Ween free Halloween movie and talk">
-                                      &ldquo;Hart-o-Ween&rdquo; free Halloween movie and talk
-                                      </a>
-                                      </td>
-                                    </tr>
-                                    <tr>
                                       <td id="EventDate">Saturday, Nov. 7<sup>th</sup></td>
                                       <td id="Event">
+                                      <a target="blank" href="http://scvrs.homestead.com/RoseShow.html">
                                       Wild West Rose Show
+                                      </a>
                                       </td>
                                     </tr>
                                     <tr>
@@ -287,13 +280,17 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
                                     <tr>
                                       <td id="EventDate">Saturday &amp; Sunday, Nov. 28<sup>th</sup> &amp; 29<sup>th</sup></td>
                                       <td id="Event">
+                                      <a href="Event_Pages/holidayBoutique2015.png" rel="lightbox[boutique]">
                                       Hart Holiday Boutique &amp; Craft Show
+                                      </a>
                                       </td>
                                     </tr>
                                     <tr>
                                       <td id="EventDate">Saturday, Dec. 5<sup>th</sup></td>
                                       <td id="Event">
+                                      <a href="Event_Pages/CowboysCarols2015.png" rel="lightbox[carols]">
                                       Cowboys &amp; Carols
+                                      </a>
                                       </td>
                                     </tr>
                                   </tbody>
@@ -302,18 +299,28 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
                                       margin-bottom: 5px" align="center">
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"></p>
                                     <p align="center">
-                                      <a href="Event_Pages/Hart-o-Ween-2015.jpg" rel="lightbox[hartoween2]"
-                                        title="Enjoy a locally filmed movie, perfect for Halloween!">
-                                        <h3>Enjoy a locally filmed FREE movie, perfect for Halloween!</h3>
-                                        <img src="Event_Pages/Hart-o-Ween-2015-sm.jpg" />
+                                      <a href="Event_Pages/holidayBoutique2015.png" rel="lightbox[boutique2]"
+                                        title="Hart Holiday Boutique &amp; Craft Fair">
+                                        <h3>Hart Holiday Boutique &amp; Craft Fair</h3>
+                                        <img src="Event_Pages/holidayBoutique2015-sm.png" />
                                         </a>
                                     </p>
-<!--
                                     <p style="margin-top: 7px;
                                       margin-bottom: 5px" align="center">
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"></p>
--->
-                        </tr>
+                                    <p align="center">
+                                      <a href="Event_Pages/CowboysCarols2015.png" rel="lightbox[carols2]"
+                                        title="Cowboys & Carols">
+                                        <h3>Cowboys & Carols</h3>
+                                        <img src="Event_Pages/CowboysCarols2015-sm.png" />
+                                        </a>
+                                    </p>
+                                    <p style="margin-top: 7px;
+                                      margin-bottom: 5px" align="center">
+<img src="images/baseline_v2.gif" border="0" height="24" width="546"></p>
+                                    <p align="center">
+                                    <img src="images/HappyHolidays.png" />
+                                    </p>
                       </tbody>
                     </table>
                     <hr>
