--- a/index.html
+++ b/index.html
@@ -200,6 +200,7 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
                                             border="0" height="24"
                                             width="313"></font></b></i></td>
                                 </tr>
+<!--
                                 <tr>
                                   <td style="vertical-align: top;">
                                     <h3> Click <a target="_blank" href="https://www.facebook.com/media/set/?set=a.930784956986448.1073741830.171859949545623&type=3">here</a> for photos from Silents Under the Stars 2015!</h3>
@@ -218,6 +219,7 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
                                             border="0" height="24"
                                             width="313"></font></b></i></td>
                                 </tr>
+-->
                               </tbody>
                             </table>
                                 <p style="text-indent: 20px"
@@ -237,6 +239,7 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
                                     continued support.</font></p>
                               </b></i></td>
                           <td align="center" valign="top" width="557">
+<!--
                             <div><i><b> </b></i>
                               <div style="text-align: center;">
                                     <a href="Event_Pages/silents.html">
@@ -254,6 +257,7 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
                                     <p style="margin-top: 7px;
                                       margin-bottom: 5px" align="center">
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"></p>
+-->
                                 <h2>2016 Calendar of Events</h2>
                                 <h3>Click on links as details become available</h3>
                                 <table style="text-align: left; width:
@@ -269,19 +273,49 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
                                       </td>
                                     </tr>
                                     <tr>
+                                      <td id="EventDate">Saturday &amp; Sunday, Sep. 10-11</td>
+                                      <td id="Event">
+                                      <a href="Event_Pages/train2016.png" rel="lightbox[train]">
+                                      Train Show
+                                      </a>
+                                      </td>
+                                    </tr>
+                                    <tr>
                                       <td id="EventDate">Saturday &amp; Sunday, Oct. 1-2</td>
                                       <td id="Event">
                                       <a href="Event_Pages/powwow.html">
                                       Hart of the West Pow Wow
                                       </a>
                                       </td>
-                                    <tr>
+                                    </tr>
                                     <tr>
                                       <td id="EventDate">Sunday, Oct. 9<sup>th</sup> 11am&ndash;4pm</td>
                                       <td id="Event">
                                       <a target="_blank" href="http://www.bowwowsandmeows.org/">
                                       Bow Wows &amp; Meows pet fair</a>
                                       </td>
+                                    </tr>
+                                    <tr>
+                                      <td id="EventDate">Saturday, Oct. 15<sup>th</sup> 11am&ndash;4pm</td>
+                                      <td id="Event">
+                                      <a href="Event_Pages/artist2016.png" rel="lightbox[art]">
+                                      SCV Artists Association Art Classic</a>
+                                      </td>
+                                    </tr>
+                                    <tr>
+                                      <td id="EventDate">Saturday, Nov. 5<sup>th</sup></td>
+                                      <td id="Event">
+                                      <a href="Event_Pages/artist2016.png" rel="lightbox[rose]">
+                                        "Wild West" Rose Show
+                                      </a>
+                                      </td>
+                                    </tr>
+                                    <tr>
+                                      <td id="EventDate">Saturday &amp; Sunday, Nov. 26-27, 10am-4pm</td>
+                                      <td id="Event">
+                                      Hart Holiday Boutique &amp; Craft Fair
+                                      </td>
+                                    </tr>
                                     <tr>
                                       <td id="EventDate">Saturday, Dec. 3<sup>rd</sup> (tentative)</td>
                                       <td id="Event">
