--- a/index.htm
+++ b/index.htm
@@ -268,9 +268,16 @@ Click below for photos from Friends of Hart Park <i>2017 Year in Review</i><br>
                                     <p style="margin-top: 7px;
                                       margin-bottom: 5px" align="center">
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
-                                      <a href= "Event_Pages/sax2018.jpg" 
+                                      <a href= "Event_Pages/movies2018/Coco.png" 
+                                      title="Movies in the Park" rel="lightbox[coco]">
+                                      <img src="Event_Pages/movies2018/Coco-sm.png"/>
+                                      </a>
+                                    <p style="margin-top: 7px;
+                                      margin-bottom: 5px" align="center">
+<img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
+                                      <a href= "Event_Pages/music2018/SAXTRAVAGANZA.JPG" 
                                       title="Music in the Park" rel="lightbox[sax]">
-                                      <img src="Event_Pages/sax2018-sm.jpg"/>
+                                      <img src="Event_Pages/music2018/SAXTRAVAGANZA-sm.JPG"/>
                                       </a>
                                     <p style="margin-top: 7px;
                                       margin-bottom: 5px" align="center">
@@ -282,30 +289,36 @@ Click below for photos from Friends of Hart Park <i>2017 Year in Review</i><br>
                                   cellspacing="5">
                                   <tbody>
                                     <tr>
-                                      <td id="EventDate">
-                                        Sunday, June 24<sup>th</sup>
-                                        6pm</td>
-                                      <td id="Event">
-                                      <a href= "Event_Pages/sax2018.jpg" 
-                                      title="Music in the Park" rel="lightbox[sax]">
-                                      &ldquo;Saxtravaganza&rdquo; Free Saxophone Chamber Music concert              
-                                      </a>
-                                      </td>
-                                    </tr>
-                                    <tr>
                                       <td id="EventDate">Fridays
                                         July 13<sup>th</sup>,
                                         Aug. 3<sup>rd</sup>,
                                         Aug. 17<sup>th</sup>
                                         &mdash; at Dusk</td>
                                       <td id="Event">
+                                      <a href= "Event_Pages/movies2018/Coco.png" 
+                                      title="Movies in the Park" rel="lightbox[movies2018]">
                                       Free Movies in the Park
+                                      </a>
+                                      <a href= "Event_Pages/movies2018/Jumanji.png" 
+                                      title="Movies in the Park" rel="lightbox[movies2018]"/>
+                                      <a href= "Event_Pages/movies2018/BlackPanther.png" 
+                                      title="Movies in the Park" rel="lightbox[movies2018]"/>
+                                      </td>
+                                    </tr>
+                                      <td id="EventDate">
+                                        Thursday, July 19<sup>th</sup>
+                                        6pm</td>
+                                      <td id="Event">
+                                      <a href= "Event_Pages/music2018/SAXTRAVAGANZA.JPG" 
+                                      title="Music in the Park" rel="lightbox[sax]">
+                                      &ldquo;Saxtravaganza&rdquo; Free Saxophone Chamber Music concert              
+                                      </a>
                                       </td>
                                     </tr>
                                     <tr>
                                       <td id="EventDate">Saturday
                                         July 28<sup>th</sup>
-                                        &mdash; 7&ndash;10pm</td>
+                                         7&ndash;10pm</td>
                                       <td id="Event">
                                       Goin' Country at Hart live music!
                                       </td>
@@ -345,8 +358,9 @@ Click below for photos from Friends of Hart Park <i>2017 Year in Review</i><br>
                                         Saturday &amp; Sunday, Oct. 6<sup>th</sup>&ndash;7<sup>th</sup>
                                         10am&ndash;7pm</td>
                                       <td id="Event">
-                                      Hart of the West Native American
-                                      &ldquo;Pow Wow&rdquo; and Craft Fair
+                                      Hart of the West 
+                                      <a href="Event_Pages/powwow.html">Native American
+                                      &ldquo;Pow Wow&rdquo; and Craft Fair</a>
                                       </td>
                                     </tr>
                                     <tr>
