--- a/Event_Pages/silents.html
+++ b/Event_Pages/silents.html
@@ -132,6 +132,7 @@ function MM_swapImage() { //v3.0
 											2018 at 6pm</h3></span></TD>
 											<TD valign="top">
 											<p align="center" style="margin-top: 7px; margin-bottom: 5px">
+                                            <!--
 											<span class="Apple-style-span">
 											<span style="font-family: Copperplate Gothic Bold; text-align: auto; border-collapse: separate; color: #C80000; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px" class="Apple-style-span">
 											<h3>Buy tickets here! </h3>
@@ -161,6 +162,14 @@ function MM_swapImage() { //v3.0
 											<span style="letter-spacing: normal">
 											<span style="font-family: Copperplate Gothic Bold; -webkit-text-stroke-width:0px; -webkit-text-size-adjust:auto; -webkit-text-decorations-in-effect:none; -webkit-border-vertical-spacing:0px; -webkit-border-horizontal-spacing:0px; word-spacing:0px; widows:2; white-space:normal; text-transform:none; text-indent:0px; orphans:2; line-height:normal; letter-spacing:normal; font-weight:normal; font-variant:normal; font-style:normal; color:#C80000; border-collapse:separate; text-align:auto" class="Apple-style-span">
 											<font size="4">Tickets are non-Refundable</font></span></span></p>
+                                            -->
+                                            <h1 align="center" class="silents">
+                                            Sold Out!<br>
+                                            Sold Out!<br>
+                                            Sold Out!<br>
+                                            Sold Out!<br>
+                                            Sold Out!<br>
+                                            </h1>
 											</TD>
 											</TR>
 											<TR>
